--- a/client/src/app/layout/header/header.component.html
+++ b/client/src/app/layout/header/header.component.html
@@ -1,1 +1,3 @@
-<p>header works!</p>
+<div class="header-container">
+    <a class="company-link" mat-list-item [routerLink]="['./home']">AMPLICY</a>
+</div>
