--- a/client/src/app/layout/nav-bar/nav-bar.component.html
+++ b/client/src/app/layout/nav-bar/nav-bar.component.html
@@ -1,5 +1,31 @@
-<app-header></app-header>
-<p>nav-bar works!</p>
-<div>
-    <router-outlet></router-outlet>
+<div class="home-container-outer">
+    <div class="home-container-inner">
+        <mat-toolbar class="public-header-container" color="primary">
+            <app-header></app-header>
+        </mat-toolbar>
+        <div class="sidenav-container-outer">
+            <div class="sidenav-container-inner">
+                <mat-sidenav-container>
+                    <mat-sidenav mode="side" opened="true" disableClose="true">
+                        <mat-nav-list>
+                            <!-- Sidenav links -->
+                            <a mat-list-item class="nav-link" [routerLink]="['./home']">
+                                <div matLine> Home </div>
+                            </a>
+                            <a mat-list-item class="nav-link" [routerLink]="['./assets']">
+                                <div matLine> Assets </div>
+                            </a>
+                        </mat-nav-list>
+                    </mat-sidenav>
+                    <mat-sidenav-content>
+                        <div class="content-container-outer">
+                            <div class="content-container-inner">
+                                <router-outlet></router-outlet>
+                            </div>
+                        </div>
+                    </mat-sidenav-content>
+                </mat-sidenav-container>
+            </div>
+        </div>
+    </div>
 </div>
