--- a/client/src/app/pages/assets/assets.component.html
+++ b/client/src/app/pages/assets/assets.component.html
@@ -8,12 +8,12 @@
 </mat-grid-list>
 
 <mat-grid-list cols="6" rowHeight="4rem">
-    <mat-grid-tile *ngFor="let asset of assets" [colspan]="1" [rowspan]="2">
+    <mat-grid-tile *ngFor="let asset of assets | async" [colspan]="1" [rowspan]="2">
 
         <mat-card>
             <mat-card-header>
                 <mat-card-title>{{asset.name}}</mat-card-title>
-                <mat-card-subtitle>{{asset.dateCreated}}</mat-card-subtitle>
+                <mat-card-subtitle>{{asset.dateCreated | date:'dd/MM/yy, HH:mm:ss'}}</mat-card-subtitle>
             </mat-card-header>
             <mat-card-content style="margin-left: 1rem;">
                 <p>
